// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render expenses sumamry with multiple expense 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $2,213,431,235.35
  </h1>
</div>
`;

exports[`should correctly render expenses sumamry with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;
